--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Manoj H N</h1>
-      <p>I'm <span class="typed" data-typed-items="Site Reliability Engineer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Site Reliability Engineer"></span></p>
       <div class="social-links">
         <a href="https://www.instagram.com/manojnssm/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/manoj-h-n-90a5337a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -81,20 +81,20 @@
             <img src="assets/img/manoj-dp.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Site Reliability Engineer</h3>
+            <h3>Manoj H N</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30th March 1993</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://manojgowda.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 7204616086</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Banglore, India</span></li>
+					<li><i class="bi bi-chevron-double-right"></i> <strong>Birthday:</strong> <span>30th March 1993</span></li>
+					<li><i class="bi bi-chevron-double-right"></i> <strong>Website:</strong> <span>https://manojgowda.github.io</span></li>
+					<li><i class="bi bi-chevron-double-right"></i> <strong>Phone:</strong> <span>+91 7204616086</span></li>
+					<li><i class="bi bi-chevron-double-right"></i> <strong>City:</strong> <span>Banglore, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Engineering</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>manojgowdanssm@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-double-right"></i> <strong>Degree:</strong> <span>Bachelor of Engineering</span></li>
+                  <li><i class="bi bi-chevron-double-right"></i> <strong>Email:</strong> <span>manojgowdanssm@gmail.com</span></li>
                 </ul>
               </div>
             </div>
@@ -150,14 +150,14 @@
             <div class="progress">
               <span class="skill">React <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">System Design <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -190,14 +190,6 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Bachelor of Engineering &amp; Computer Science</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Dr Ambedkar Institute of Technology, Banglore</em></p>
-            </div>
-          </div>
-          <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Site Reliability Engineer - II</h4>
@@ -219,6 +211,14 @@
                 <li>Built a common CI/CD pipeline for products and microservices to boost overall release times by 25%.</li>
                 <li>Setup autoscaling of docker containers and AWS EC2 machines which increased product stability by 30%.</li>
               </ul>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Bachelor of Engineering &amp; Computer Science</h4>
+              <h5>2010 - 2014</h5>
+              <p><em>Dr Ambedkar Institute of Technology, Banglore</em></p>
             </div>
           </div>
         </div>
