--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button name="submit" type="submit">Send Message</button></div>
+              <div class="text-center"><button id="contact-button" name="submit" type="submit">Send Message</button></div>
               <p id="contact-form-status"></p>
             </form>
 
@@ -323,29 +323,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
-  <script>
-    var form = document.getElementById("contact");
-    
-    async function handleSubmit(event) {
-      event.preventDefault();
-      var status = document.getElementById("contact-form-status");
-      var data = new FormData(event.target);
-      fetch(event.target.action, {
-        method: form.method,
-        body: data,
-        headers: {
-            'Accept': 'application/json'
-        }
-      }).then(response => {
-        status.innerHTML = "Thanks for your submission!";
-        form.reset()
-      }).catch(error => {
-        status.innerHTML = "Oops! There was a problem submitting your form"
-      });
-    }
-    form.addEventListener("submit", handleSubmit)
-</script>
 
 </body>
 
