--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form id="contact" action="https://formspree.io/f/xvodrdlg" method="post" role="form" class="php-email-form">
+            <form id="contact-form" action="https://formspree.io/f/xvodrdlg" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -279,8 +279,8 @@
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div id="error-msg" class="error-msg" style="display: none;">Your message failed to sent.</div>
+                <div id="sent-msg" class="sent-msg" style="display: none;">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button id="contact-button" name="submit" type="submit">Send Message</button></div>
               <p id="contact-form-status"></p>
@@ -323,7 +323,30 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <script>
+    var form = document.getElementById("contact-form");
+    
+    async function handleSubmit(event) {
+      event.preventDefault();
+      var error_div = document.getElementById("error-msg");
+      var success_div = document.getElementById("sent-msg");
+      var data = new FormData(event.target);
+      fetch(event.target.action, {
+        method: form.method,
+        body: data,
+        headers: {
+            'Accept': 'application/json'
+        }
+      }).then(response => {
+        error_div.style.display = 'none';
+        success_div.style.display = 'block';
+      }).catch(error => {
+        success_div.style.display = 'none';
+        error_div.style.display = 'block';
+      });
+    }
+    form.addEventListener("submit", handleSubmit)
+</script>
 </body>
 
 </html>
